Multiple fixes.